# soft354-mpi

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  Canny.cpp  Canny.h  Gauss.cpp  Gauss.h  Matrix2D.h  Padding.cpp  Padding.h
test/: CMakeLists.txt  GaussianFilterTest.cpp  GreyscaleFilterTest.cpp
